--- a/secciones/bi/bi_estilo.css
+++ b/secciones/bi/bi_estilo.css
@@ -28,63 +28,61 @@
   align-items: center;
   background-color: lightblue;
 }
-
 .contenedor__bi {
-  height: 90%;
   display: flex;
-  gap: 1px;
-  padding: 2px;
-  margin: 0 auto;
-  background-color: var(--color-hover);
-  justify-content: center;
+  gap: 10px;
+  padding: 0;
+  margin-top: 1.4rem;
+  align-items: stretch; /* Asegura que todos los elementos hijos tengan la misma altura */
 }
 
-.contenido__bi__9 {
-  flex: 9; /* 90% del espacio */
+.contenido__bi__7 {
+  flex: 3; /* El 75% del espacio */
+  min-width: 70%;
 }
 
 .contenido__bi__1 {
-  flex: 0.2; /* 10% del espacio */
+  flex: 1; /* El 25% del espacio */
 }
 
-.contenedor__flex__bi--1 {
-  flex: 1; /* 10% del espacio */
-}
-
-/* Elementos de negocio e inteligencia */
 .bi__elemento {
-  margin-top: 0.5rem;
-  padding: 0.5rem;
-  font-size: 0.8rem;
-  background: url(../../images/background/bk.jpg);
-  border-radius: 10px;
-  border-color: #3a3f47;
-  box-shadow: inset 0 0 10px #282c34aa;
-  color: var(--color-texto);
-  border: 1px solid var(--color-texto);
-  border-radius: 5px;
-  border-color: #61dafb;
-  box-shadow: inset 5px 5px 10px #61dafb99;
   display: flex;
   flex-flow: column nowrap;
+  justify-content: space-between; /* Alineación vertical uniforme */
+  height: 100%; /* Asegura que todos los elementos ocupen el mismo alto */
+}
+
+.tabla__contenedor,
+.chart-container {
+  flex: 1; /* Hace que las tablas y los gráficos ocupen el mismo espacio disponible */
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+}
+
+.chart-container canvas {
+  width: 100%; /* Asegura que el gráfico ocupe todo el ancho disponible */
+  height: auto; /* Mantiene la proporción adecuada */
 }
 
 canvas {
-  max-width: 300px;
-  margin: 0 1rem;
-  border: 2px solid var(--color-hover, #ddd);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  height: 200px; /* Limita la altura de los gráficos */
+  border: 0.5px solid var(--color-hover, #ddd);
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+canvas #chart1 {
+  width: 98%;
+  height: 200px;
+}
 /* Tablas */
 .dataTable,
 .table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 table tr:nth-child(even),
@@ -158,11 +156,15 @@ button:hover {
 /* Contenedores para tablas */
 .tabla__contenedor {
   border-radius: 10px;
+  flex: 1;
   overflow: hidden;
   background-color: var(--color-paleta4);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+
+  height: 100%; /* Asegura que las tablas también ocupen todo el alto disponible */
 }
+
 .tabla__contenedor th,
 .tabla__contenedor tr,
 .tabla__contenedor td {
@@ -173,17 +175,20 @@ button:hover {
   color: var(--color-subtitulo);
   font-size: var(--medida-titulo-mediano);
   text-align: center;
-  margin-bottom: 1rem;
-}
-
-/* DataTables search box alignment */
-.dataTables_wrapper .dataTables_filter {
-  float: right;
-  text-align: right;
+  margin-bottom: 0.4rem;
 }
 
 /* DataTables pagination style */
 .dataTables_wrapper .dataTables_paginate {
   margin-top: 10px;
   float: right;
+}
+.tarjeta__kpi__data {
+  border: 0.8px solid var(--color-hover);
+  border-radius: 7px;
+  box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 0.2rem;
+  text-align: center;
+  margin: 0.1rem;
+  display: flex;
 }
