--- a/assets/apps/sara/sara.css
+++ b/assets/apps/sara/sara.css
@@ -1,6 +1,6 @@
 @import url("./configuracion.css");
 @import url("./css/sara/tablero/estadisticas.css");
-
+@import url("./css/sara/tablero/marco.css");
 @import url("./css/general.css");
 @import url("./css/sara/notificaciones/instrucciones.css");
 @import url("./css/sara/notificaciones/ventanasEmergentes.css");
