--- a/estilos/css/utilidades/contenedores.css
+++ b/estilos/css/utilidades/contenedores.css
@@ -17,9 +17,9 @@
   width: 100%;
   /* Ancho del 100% del contenedor */
 
-  gap: 5rem;
+  gap: 2rem;
   padding: 1rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   /* Altura del 100% del contenedor */
 
   /* Otros estilos que no causen scroll */
@@ -41,18 +41,22 @@
   display: flex;
 }
 
+.contenedor__flex__wrap {
+  display: flex;
+  flex-flow: row wrap;
+}
 .contenedor__flex__separado {
   display: flex;
   flex-wrap: wrap; /* Permite que los elementos se envuelvan en múltiples líneas */
   justify-content: space-between; /* Espacio entre los elementos */
-  gap: 0.6rem; /* Espacio entre tarjetas */
-  margin-bottom: 0.5rem; /* Espacio inferior */
+
+  margin-bottom: 0.2rem; /* Espacio inferior */
 }
 
 .contenedor__flex__centrado__centrado {
   display: flex;
   flex-wrap: wrap; /* Permite que los elementos se envuelvan en múltiples líneas */
-  justify-content: centrado;
+  justify-content: center;
   align-items: center;
   gap: 3rem; /* Espacio entre tarjetas */
   margin-bottom: 0.5rem; /* Espacio inferior */
@@ -91,6 +95,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.contenedor__flex__columna__centrado__centrado {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.gap {
+  gap: 1rem;
 }
 
 /* Alineación de elementos al inicio del contenedor */
@@ -174,10 +188,40 @@
   transition: transform 1s; /* Suaviza la transición de rotación */
 }
 
+.contenedor__grid__300 {
+  display: grid; /* Ajusta la dirección de los elementos en pantallas más pequeñas */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 0.5rem;
+  justify-content: center;
+}
+
+.contenido__50 {
+  max-height: 50%;
+}
+
+.contenedor__grid__200 {
+  display: grid; /* Ajusta la dirección de los elementos en pantallas más pequeñas */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+}
+.flex2 {
+  flex: 2;
+}
+.flex1 {
+  flex: 1;
+}
+
 .contenedor__grid_2 {
   display: grid; /* Ajusta la dirección de los elementos en pantallas más pequeñas */
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1rem;
+}
+
+.contenedor__grid__250 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px); /* Crea columnas de 300px */
+  gap: 16px; /* Espacio entre los elementos */
+  justify-content: center; /* Centra el contenido */
 }
 
 @media (min-width: 600px) {
@@ -191,4 +235,45 @@
 
 .contenedor__padding {
   padding: 1rem;
+}
+
+.contenedor__imagen__texto {
+  display: flex;
+  position: relative;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
+}
+
+.contenedor__imagen__texto p {
+  padding: 1rem;
+}
+.contenedor__imagen__texto img {
+  width: 50%;
+
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+  /* Recorta el 20% inferior izquierdo */
+}
+
+.contenedor__imagen__texto ul {
+  margin: 1rem;
+  position: absolute;
+  top: 50%; /* Ajusta esto si quieres mover el texto un poco más arriba */
+  left: 35%; /* Coloca el texto en la parte inferior derecha */
+  /* Ajusta el ancho del texto como necesites */
+
+  padding: 1.5rem;
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: left;
+  list-style-type: none;
+}
+
+@media (min-width: 48rem) {
+  .contenedor__imagen__texto .texto__sobre__imagen {
+    font-size: 1.2rem;
+  }
 }
