--- a/secciones/bi/css/bi__kpi.css
+++ b/secciones/bi/css/bi__kpi.css
@@ -13,6 +13,7 @@
 
 /* Tarjetas individuales */
 .tarjeta__KPI {
+  background-color: rgba(23, 76, 150, 0.6);
   border-radius: 7px;
   padding: 0.1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
