--- a/secciones/proyectos/proyectos.css
+++ b/secciones/proyectos/proyectos.css
@@ -7,22 +7,24 @@
 .proyectos__grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
-  gap: 0.8rem;
+  gap: 1rem;
 }
 
 .proyecto {
+  max-height: 400px;
   background: url(../../images/background/bk.jpg);
   border-radius: 8px;
   border: 1px solid #61dafb;
   box-shadow: inset 0 2px 5px #61dafbaa;
-  transition: transform 0.3s ease;
-
+  transition: transform 0.5s ease;
+padding: 1rem 2rem;
   display: flex;
   gap: 1rem;
   padding: 0.5rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
 }
 
 .proyecto:hover {
@@ -31,9 +33,10 @@
 }
 .proyecto img {
   text-align: center;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 .proyecto__title {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   padding: 1px 2px;
   color: white;
 }
@@ -42,11 +45,12 @@
   border-radius: 10px;
   border: 1px solid #61dafb;
   width: 80%;
+  max-width: 250px;
   height: 50%;
 }
 
 .proyecto__content {
-  padding: 4px;
+  padding: 1rem;
 }
 
 .proyecto__description {
