--- a/estilos/css/utilidades/colores.css
+++ b/estilos/css/utilidades/colores.css
@@ -187,3 +187,85 @@
   );
   filter: brightness(1.1);
 }
+
+.gradiente1 {
+  background-color: radial-gradient(
+    circle,
+    #9548b5,
+    #3193d5,
+    #01257d,
+    #04254e,
+    rgba(138, 213, 235, 0.3),
+    #00000,
+    #00300,
+    #00600,
+    #00900,
+    #01200,
+    #01500,
+    #01800,
+    #02100,
+    #02400,
+    #02700,
+    #03000,
+    #03300,
+    #03600,
+    #03900,
+    #04200,
+    #04500,
+    #04800,
+    #05100,
+    #05400,
+    #05700,
+    #06000,
+    #06300,
+    #06600,
+    #06900,
+    #07200,
+    #07500,
+    #07800,
+    #08100,
+    #08400,
+    #087fff,
+    #090fff,
+    #093fff,
+    #096fff,
+    #099fff,
+    #102fff,
+    #105fff,
+    #108fff,
+    #111fff,
+    #114fff,
+    #117fff,
+    #120fff,
+    #123fff,
+    #126fff,
+    #129fff,
+    #132fff,
+    #135fff,
+    #138fff,
+    #141fff,
+    #14400,
+    #14700,
+    #15000,
+    #15300,
+    #15600,
+    #15900,
+    #117fff,
+    #120fff,
+    #123fff,
+    #126fff,
+    #129fff,
+    #132fff,
+    #135fff,
+    #138fff,
+    #141fff,
+    #16200,
+    #16500,
+    #16800,
+    #17100,
+    #17400,
+    #17700,
+    #18000,
+    #18300
+  );
+}
