--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -2,3 +2,56 @@
 @import url("./css/principal.css");
 @import url("./general.css");
 @import url("./movil.css");
+
+
+
+
+@keyframes fadeInZoom {
+	0% {
+	  opacity: 0;
+	  transform: scale(0.5);
+	}
+	100% {
+	  opacity: 1;
+	  transform: scale(1);
+	}
+  }
+  @keyframes typing {
+	from {
+	  width: 0;
+	}
+	to {
+	  width: 100%;
+	}
+  }
+  @keyframes blink-caret {
+	from,
+	to {
+	  border-color: transparent;
+	}
+	50% {
+	  border-color: orange;
+	}
+  }
+  .maquina__escribir {
+
+
+	text-align: center;
+
+	white-space: nowrap;
+	overflow: hidden;
+	border-right: 3px solid;
+	width: 0;
+	opacity: 0;
+	transform: scale(0.5);
+	animation: fadeInZoom 2s ease forwards, typing 4s steps(30, end) 2s forwards,
+	  blink-caret 0.75s step-end infinite 6s;
+	transition: text-shadow 0.5s, transform 0.5s, color 0.5s;
+  }
+  .maquina__escribir:hover {
+	text-shadow: 3px 3px 0 #0ae, -3px -3px 0 #00ffff, 3px -3px 0 #0eaa,
+	  -3px 3px 0 #5ff;
+	transform: scale(1.2);
+	color: #5dde;
+  }
+  
